--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,9 +1,13 @@
 {
   "env": {
     "node": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:jest/recommended"],
+  "plugins": [
+    "jest"
+  ],
   "rules": {
     "prettier/prettier": ["error"]
   }
