--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "start": "node ./src/server.js",
-    "start:dev": "NODE_ENV=development node ./src/server.js",
-    "start:prod": "NODE_ENV=production node ./src/server.js"
+    "start": "nodemon ./src/server.js",
+    "start:dev": "NODE_ENV=development nodemon ./src/server.js",
+    "start:prod": "NODE_ENV=production nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
