--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.8",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.1"
   },
