feat: database addition

--- a/backend2/config.env
+++ b/backend2/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=
-DATABASE_LOCAL=
-DATABASE_PASSWORD=
+DATABASE=${MONGODB_WORKHUB_URL}
+DATABASE_LOCAL=mongodb://localhost:27017/workhub_local
+DATABASE_PASSWORD=${MONGODB_WORKHUB_PASSWORD}
