feat: created task models

--- a/backend2/.eslintrc.json
+++ b/backend2/.eslintrc.json
@@ -31,6 +31,10 @@
             {
                 "argsIgnorePattern": "req|res|next|val"
             }
+        ],
+        "linebreak-style": [
+            "error",
+            "unix"
         ]
     }
 }
