feat: class task completion

--- a/backend2/.eslintrc.json
+++ b/backend2/.eslintrc.json
@@ -32,9 +32,6 @@
                 "argsIgnorePattern": "req|res|next|val"
             }
         ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ]
+        "linebreak-style": 0
     }
 }
