feat: created user model

--- a/backend2/config.env
+++ b/backend2/config.env
@@ -3,3 +3,5 @@ PORT=3000
 DATABASE=${MONGODB_WORKHUB_URL}
 DATABASE_LOCAL=mongodb://localhost:27017/workhub_local
 DATABASE_PASSWORD=${MONGODB_WORKHUB_PASSWORD}
+BCRYPT_SALT=12
+PASSWORD_RESET_EXPIRES=10
