--- a/backend2/package.json
+++ b/backend2/package.json
@@ -11,12 +11,13 @@
   "author": "Felipe Ferraz",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
-    "validator": "^13.12.0"
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
