feat: created auth controller

--- a/backend2/config.env
+++ b/backend2/config.env
@@ -1,7 +1,17 @@
 NODE_ENV=development
 PORT=3000
+
 DATABASE=${MONGODB_WORKHUB_URL}
 DATABASE_LOCAL=mongodb://localhost:27017/workhub_local
 DATABASE_PASSWORD=${MONGODB_WORKHUB_PASSWORD}
+
+JWT_SECRET=my-ultra-secure-and-ultra-long-secret
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 BCRYPT_SALT=12
 PASSWORD_RESET_EXPIRES=10
+
+EMAIL_USERNAME=${MAILTRAP_EMAIL_USERNAME}
+EMAIL_PASSWORD=${MAILTRAP_EMAIL_PASSWORD}
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
