--- a/backend/package.json
+++ b/backend/package.json
@@ -1,46 +1,45 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "index.js",
+  "description": "workhub backend",
+  "main": "server.js",
   "scripts": {
-    "test": "jest",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
     "start": "nodemon ./src/server.js",
-    "start:dev": "NODE_ENV=development nodemon ./src/server.js",
-    "start:prod": "NODE_ENV=production nodemon ./src/server.js"
+    "start:prod": "NODE_ENV=production nodemon ./src/server.js",
+    "debug": "ndb ./src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Felipe Ferraz",
+  "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "pg-hstore": "^2.3.4",
-    "redis": "^4.7.0",
-    "sequelize": "^6.37.5"
+    "mongoose": "^8.12.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
+    "slugify": "^1.6.6",
+    "validator": "^13.15.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
-    "@eslint/js": "^9.17.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.14.0",
-    "jest": "^29.7.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "nodemon": "^3.1.9",
-    "prettier": "^3.4.2",
-    "supertest": "^7.0.0"
+    "prettier": "^3.5.3"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
